--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -6,7 +6,7 @@
             android:title="Push"
             android:summary="Message Notification"
             android:key="push"/>
-        <SwitchPreference
+        <SwitchPreferenceCompat
             android:title="switch"
             android:key="switch" />
     </PreferenceCategory>
